# SOTA

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  pyproject.toml  run  test
agbenchmark/: benchmarks.py  regression_tests.json
agbenchmark/reports/: file1_08-01-11-54.json  file2_08-01-11-55.json
sota/: __main__.py  agent.py
